--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ license = "MIT OR Apache-2.0"
 [features]
 std = []
 default = ["std"]
+serde = ["dep:serde"]
+
+[dependencies]
+serde = { version = "1.0", features = ["derive"], optional = true }
 
 [workspace]
 members = ["debug"]
